# intern-diary

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  RELEASE_DRAFT.md  ROADMAP.md  SECURITY.md  SUPPORT.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-check.yml
.kiro/specs/android-latest-stable-upgrade/: design.md  requirements.md  tasks.md
docs/: android-build.zh-CN.md  api.zh-CN.md  architecture.zh-CN.md  deployment.zh-CN.md  developer-guide.zh-CN.md  llm-provider.zh-CN.md  release-process.zh-CN.md  repository.zh-CN.md  usage.zh-CN.md
docs/changes/2026-07-05-项目扩充规划/: 00-GitHub调研.md  01-需求文档.md  02-架构文档.md  (+6 more)
intern-diary-android/: settings.gradle.kts
intern-diary-android/app/: build.gradle.kts
intern-diary-server/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
intern-diary-server/app/: audit.py  auth.py  config.py  db.py  main.py  model_client.py  paths.py  schemas.py  word_renderer.py
intern-diary-server/deploy/: ensure-intern-diary.sh
intern-diary-server/prompts/: context.md  daily_sort.md  diary_generation.md  image_description.md
intern-diary-server/tests/: test_assistant.py  test_console.py  test_entries.py  test_generation.py  test_health_auth.py  test_images.py  test_reports.py  test_storage.py  test_word.py
intern-diary-server/tools/: build_template.py
templates/: diary_template_original.docx  diary_template_working.docx  report_templates.json
(+77 files in other folders)
