[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "intern-diary-server"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "python-multipart>=0.0.9",
  "python-docx>=1.1",
  "httpx>=0.27"
]

[project.optional-dependencies]
test = ["pytest>=8.2", "pytest-asyncio>=0.23"]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
